[package]
name = "extract-rs"
version = "0.1.3"
edition = "2021"

[[example]]
name = "cli"

[dependencies]
libc = { version = "0.2.155" }
jni = { version = "0.21.1",features = ["invocation"] }
thiserror = { version = "1.0.59" }

[build-dependencies]
fs_extra = { version = "1.3.0" }

reqwest = { version = "0.12.5", features = ["blocking", "json"] }
zip = "2.1.3"
flate2 = "1.0"
tar = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
rpath = true