[package]
name = "extract-rs-python"
publish = false

authors = ["Yobix AI <dev@yobix.ai>"]
edition = "2021"
homepage = "https://extract-rs.yobix.ai/"
license = "Apache-2.0"
repository = "https://github.com/yobix-ai/extract-rs"
rust-version = "1.75"
version = "0.1.0"


[lib]
name = "extractrs" # This has to match the folder name under python foler i.e. python/extractrs/
crate-type = ["cdylib"]
doc = false

[dependencies]
# "abi3-py310" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.10
pyo3 = { version = "0.22.2", features = ["abi3", "abi3-py38"] }
extract-rs = { path = "../../extract-core" }