[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "extract-rs"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
description = "extract-rs Python Binding"
license = { text = "Apache-2.0" }
readme = "README.md"
# PyO3 doesn't support python 3.13 yet.
requires-python = ">=3.10, < 3.13"


[project.urls]
Documentation = "https://extract-rs.yobix.ai/docs/python/index.html"
Homepage = "https://extract-rs.yobix.ai/"
Repository = "https://github.com/yobix-ai/extract-rs"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
module-name = "extractrs._extractrs"
python-source = "python"